--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -1,5 +1,7 @@
+%script{:src => "//maps.google.com/maps/api/js?key=#{ENV['MAPS']}"}
+%script{:src => "//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"}
+%script{:src => "//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js", :type => "text/javascript"}
 
-= javascript_include_tag 'application'
 %table
   %thead
     %tr.table_head_color
@@ -20,8 +22,7 @@
       %td= @ticket.DigsiteInfo
       %td= @ticket.ResponseDueDateTime
 %br
-%div{:style => "width: 800px;"}
-  #map{:style => "width: 800px; height: 400px;"}
+#map{:style => "width: 800px; height: 400px;"}
 :javascript
   handler = Gmaps.build('Google');
   handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
