--- a/app/views/tickets/show.html.haml
+++ b/app/views/tickets/show.html.haml
@@ -1,3 +1,4 @@
+= include_gon
 %head
   %script{:async => "", :defer => "defer", :src => "https://maps.googleapis.com/maps/api/js?key=#{ENV['MAPS']}&callback=initMap"}
     :cdata
@@ -13,13 +14,13 @@
       %th ResponseDueDateTime
   %tbody
     %tr
-      %td= @ticket.RequestNumber
-      %td= @ticket.SequenceNumber
-      %td= @ticket.RequestType
-      %td= @ticket.PrimaryServiceAreaCode
-      %td= @ticket.AdditionalServiceAreaCodes
-      %td= @ticket.DigsiteInfo
-      %td= @ticket.ResponseDueDateTime
+      %td= @ticket.request_number
+      %td= @ticket.sequence_number
+      %td= @ticket.request_type
+      %td= @ticket.primary_service_area_code
+      %td= @ticket.additional_service_area_codes
+      %td= @ticket.dig_site_info
+      %td= @ticket.response_due_date_time
 %br
 #map{:style => "width: 800px; height: 400px;"}
 %h1
@@ -37,14 +38,14 @@
     %th CrewOnSite
 %tbody
   %tr
-    - unless @ticket.excavator.nil?
-      %td= @ticket.excavator.CompanyName
-      %td= @ticket.excavator.Street
-      %td= @ticket.excavator.City
-      %td= @ticket.excavator.State
-      %td= @ticket.excavator.Zip
-      %td= @ticket.excavator.Type
-      %td= @ticket.excavator.CrewOnSite
+    - if @ticket.excavator
+      %td= @ticket.excavator.company_name
+      %td= @ticket.excavator.street
+      %td= @ticket.excavator.city
+      %td= @ticket.excavator.state
+      %td= @ticket.excavator.zip
+      %td= @ticket.excavator.type
+      %td= @ticket.excavator.crew_on_site
 
 
 
